--- a/public/index.html
+++ b/public/index.html
@@ -39,5 +39,28 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script type="module">
+      // Import the functions you need from the SDKs you need
+      import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.7/firebase-app.js";
+      import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.6.7/firebase-analytics.js";
+      // TODO: Add SDKs for Firebase products that you want to use
+      // https://firebase.google.com/docs/web/setup#available-libraries
+    
+      // Your web app's Firebase configuration
+      // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+      const firebaseConfig = {
+        apiKey: "AIzaSyADQBzcv_ycJS208kbbyPrJ4CjvTJR6BQQ",
+        authDomain: "bahen-1180-5be47.firebaseapp.com",
+        projectId: "bahen-1180-5be47",
+        storageBucket: "bahen-1180-5be47.appspot.com",
+        messagingSenderId: "379031697428",
+        appId: "1:379031697428:web:8f9e7ecb1eda544f3fcf01",
+        measurementId: "G-1F4NQBJVDM"
+      };
+    
+      // Initialize Firebase
+      const app = initializeApp(firebaseConfig);
+      const analytics = getAnalytics(app);
+    </script>
   </body>
 </html>
